# duckymerone-backend

./: Cargo.toml
migrations/: 20250414164508_create_players.up.sql
src/: app_error.rs  main.rs
src/db/: mod.rs  players.rs
src/routes/: players.rs
